--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       </ul>
       <section class="section-main">
         <div class="container main-container">
-          <p class="text">Хочемо привітати тебе в цей святковий день.</p>
+          <p class="text">Вітаємо тебе в цей святковий день!</p>
           <ul class="section-main-list">
             <li class="section-main-item">
               <img
                 class="section-main-img"
                 src="./images/photo-4.jpg"
                 alt=""
-                width="90"
+                width="95"
               />
             </li>
             <li>
@@ -49,7 +49,7 @@
                 class="section-main-img"
                 src="./images/photo-13.jpg"
                 alt=""
-                width="90"
+                width="95"
               />
             </li>
             <li>
@@ -57,7 +57,7 @@
                 class="section-main-img"
                 src="./images/photo-7.jpg"
                 alt=""
-                width="90"
+                width="95"
               />
             </li>
             <p class="main-text">
@@ -96,22 +96,18 @@
                 width="70"
               />
             </li>
+            <p class="main-text">
+              Для світу ти можеш бути звичайним чоловіком, але для мене ти є
+              всесвітом. Ти сонце, яке освітило моє життя, і я не уявляю свого
+              життя без тебе!
+            </p>
             <li>
               <img
                 class="section-main-img"
-                src="./images/photo-.jpg"
+                src="./images/торт.jpg"
                 alt=""
-                width="60"
+                width="320"
               />
-            </li>
-            <li>
-              <img
-                class="section-main-img"
-                src="./images/photo-.jpg"
-                alt=""
-                width="60"
-              />
-              <p>Ти найкращий чоловік на цілій планеті</p>
             </li>
           </ul>
         </div>
@@ -119,5 +115,11 @@
       <section></section>
       <section></section>
     </main>
+    <footer class="footer">
+      <li>
+        <p class="text-footer">Ти найкращий чоловік на цілій планеті</p>
+      </li>
+      <p class="footer-text">Твоя сім'я</p>
+    </footer>
   </body>
 </html>
