--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <h1>З Днем Народження , коханий чоловік і люблячий татусь !</h1>
+        <h1>З Днем Народження коханий чоловік і люблячий татусь !</h1>
       </div>
     </header>
     <main class="main">
+      <section>
+        <p class="section-text">У твої</p>
+        <p class="section-number">37</p>
+        <p class="section-text">Вітаю і бажаю :</p>
+      </section>
       <ul>
         <li class="main-list">
           <p class="main-list-te">Міцного здоров'я</p>
@@ -31,35 +36,19 @@
         <li class="main-list">
           <p class="main-list-text">Втілення мрій</p>
         </li>
+        <li class="img">
+          <img
+            class="section-main-img"
+            src="./images/торт.jpg"
+            alt=""
+            width="320"
+          />
+        </li>
       </ul>
+
       <section class="section-main">
         <div class="container main-container">
-          <p class="text">Вітаємо тебе в цей святковий день!</p>
           <ul class="section-main-list">
-            <li class="section-main-item">
-              <img
-                class="section-main-img"
-                src="./images/photo-4.jpg"
-                alt=""
-                width="95"
-              />
-            </li>
-            <li>
-              <img
-                class="section-main-img"
-                src="./images/photo-13.jpg"
-                alt=""
-                width="95"
-              />
-            </li>
-            <li>
-              <img
-                class="section-main-img"
-                src="./images/photo-7.jpg"
-                alt=""
-                width="95"
-              />
-            </li>
             <p class="main-text">
               Для мене ти є справжнім героєм! Ти - це приклад сили та мужності.
               Я дуже вдячна тобі за все, що ти робиш для мене і нашої сім'ї.
@@ -101,25 +90,20 @@
               всесвітом. Ти сонце, яке освітило моє життя, і я не уявляю свого
               життя без тебе!
             </p>
-            <li>
-              <img
-                class="section-main-img"
-                src="./images/торт.jpg"
-                alt=""
-                width="320"
-              />
+            <li class="section-main-item">
+              <p class="section-main-text">
+                Ти найкращий чоловік на цілій планеті !!!
+              </p>
             </li>
           </ul>
         </div>
       </section>
-      <section></section>
-      <section></section>
     </main>
     <footer class="footer">
       <li>
-        <p class="text-footer">Ти найкращий чоловік на цілій планеті</p>
+        <p class="text-footer">Кохаю тебе безмежно</p>
       </li>
-      <p class="footer-text">Твоя сім'я</p>
+      <p class="footer-text">2.11.2024</p>
     </footer>
   </body>
 </html>
